--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,13 +38,12 @@ jobs:
         run: npm run build
         working-directory: ./bla-main
 
-      # Deploy desativado - ativar após configurar os secrets do Vercel
-      # - name: 🔹 Deploy para Vercel
-      #   if: github.ref == 'refs/heads/main'
-      #   uses: amondnet/vercel-action@v25
-      #   with:
-      #     vercel-token: ${{ secrets.VERCEL_TOKEN }}
-      #     vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-      #     vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-      #     working-directory: ./bla-main
-      #     vercel-args: --prod
+      - name: 🔹 Deploy para Vercel
+        if: github.ref == 'refs/heads/main'
+        uses: amondnet/vercel-action@v25
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          working-directory: ./bla-main
+          vercel-args: --prod
